--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite", 
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -30,7 +31,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.5",
-    "vite": "^6.3.1",
+    "vite": "^6.3.5",
     "vite-plugin-eslint": "^1.8.1"
   }
 }
