--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.2",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
