--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "ionicons": "^8.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
