--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@ionic/react": "^8.5.7",
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "ionicons": "^8.0.8",
     "react": "^19.0.0",
