--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.11.0",
     "ionicons": "^8.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -26,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^7.6.0",
+    "react-spring": "^9.7.5",
     "style-components": "^0.1.0",
     "styled-components": "^6.1.17"
   },
