--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ionicons": "^8.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-router": "^5.3.4",
