--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^7.6.0",
-    "react-spring": "^9.7.5",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "style-components": "^0.1.0",
     "styled-components": "^6.1.17"
   },
