--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,67 @@
-# Logs
-logs
+# ====================
+# Python
+# ====================
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.pyc
+*.egg
+*.egg-info/
 *.log
+*.sqlite3
+*.db
+*.env
+.env
+.env.*  # for .env.dev, .env.prod, etc.
+venv/
+ENV/
+env/
+.venv/
+
+# ====================
+# FastAPI / Uvicorn / Starlette
+# ====================
+instance/
+*.db
+*.sqlite3
+*.log
+
+# ====================
+# Node.js
+# ====================
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Build files
+dist/
+dist-ssr/
+build/
 
-# Editor directories and files
-.vscode/*
+# ====================
+# Editor / OS
+# ====================
+.vscode/
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
+*.swp
+*.swo
+*.swn
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+
+# ====================
+# Misc
+# ====================
+logs/
+*.log
+coverage/
+htmlcov/
+.cache/
