Cập nhật các file Python, cấu hình Axios

--- a/srcs/.env
+++ b/srcs/.env
@@ -4,3 +4,4 @@ VITE_SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 GROQ_API_KEY = "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"
 LANGCHAIN_API_KEY = "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"
 
+WATCHFILES_DEBOUNCE=2000
