--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "style-components": "^0.1.0",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
