--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.5.0",
     "framer-motion": "^12.11.0",
     "ionicons": "^8.0.8",
+    "powerbi-client": "^2.23.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fontawesome": "^1.7.1",
