--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@ionic/react": "^8.5.7",
-    "@supabase/supabase-js": "^2.49.4",
+    "@supabase/supabase-js": "^2.49.8",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
-    "framer-motion": "^12.11.0",
+    "framer-motion": "^12.12.1",
     "ionicons": "^8.0.8",
     "powerbi-client": "^2.23.1",
     "react": "^19.0.0",
@@ -31,6 +31,7 @@
     "react-router": "^5.3.4",
     "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
+    "recharts": "^2.15.3",
     "slick-carousel": "^1.8.1",
     "style-components": "^0.1.0",
     "styled-components": "^6.1.17",
@@ -50,7 +51,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.5",
+    "tailwindcss": "^4.1.7",
     "vite": "^6.3.5",
     "vite-plugin-eslint": "^1.8.1"
   }
