--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,7 @@
-langchain
-langchain_core
-streamlit
-langchain_huggingface
-dotenv
-langchain_groq
-fastapi
-langserve
-langchain-ollama
-langchain_community
-python-dotenv
-setuptools
-hf_xet
-faiss-cpu
-langchain_chroma
-langchain_groq
-langchain_core
-sse_starlette
-uvicorn[standard]
-beautifulsoup4
-openpyxl
-langchain_chroma
-qrcode[pil]
-
+fastapi==0.104.0
+uvicorn==0.23.2
+pandas==2.1.1
+python-dotenv==1.0.0
+groq==0.4.0
+python-multipart==0.0.6
+pydantic==2.4.2 
