Chạy song song Backend + Frontend (Python -> Vite)

--- a/package.json
+++ b/package.json
@@ -11,10 +11,29 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "services": "cd scripts && run_all_services.bat",
+    "services": "cd scripts && run_all_services_with_chatbot.bat",
+    "services:ps": "cd scripts && powershell -ExecutionPolicy Bypass -File .\\start_all_services_powershell.ps1",
     "service:invoice": "cd scripts && start_invoice_service.bat",
-    "service:qrcode": "cd scripts && start_qr_service.bat",
-    "server": "concurrently \"npm run dev\" \"npm run services\""
+    "service:qrcode": "cd scripts && run_qr_service.bat",
+    "service:chatbot": "cd scripts && start_chatbot_service.bat",
+    "service:enhanced-chatbot": "cd scripts && ChatBot\\start_enhanced_chatbot.bat",
+    "test:enhanced-chatbot": "cd scripts && ChatBot\\test_enhanced_chatbot.bat",
+    "service:chatbot-qr": "cd scripts && run_chatbot_qr_services.bat",
+    "service:stop-chatbot-qr": "cd scripts && stop_chatbot_qr_services.bat",
+    "service:test-chatbot-qr": "cd scripts && test_chatbot_qr_services.bat",
+    "services:all-backends": "cd scripts && run_all_backends.bat",
+    "services:stop-all": "cd scripts && stop_all_backends.bat",
+    "services:test-all": "cd scripts && test_all_backends.bat",
+    "test:chatbot": "cd scripts && test_chatbot_service.bat",
+    "server": "concurrently \"npm run dev\" \"npm run services\"",
+    "server:ps": "concurrently \"npm run dev\" \"npm run services:ps\"",
+    "server:chatbot-qr": "concurrently \"npm run dev\" \"npm run service:chatbot-qr\"",
+    "server:all-backends": "concurrently \"npm run dev\" \"npm run services:all-backends\"",
+    "fullstack": "start cmd /c \"npm run dev\" && cd scripts && run_all_backends.bat",
+    "fullstack:manual": "start cmd /c \"npm run dev\" && start cmd /c \"cd scripts && start_chatbot_service.bat\" && start cmd /c \"cd scripts && run_qr_service.bat\" && start cmd /c \"cd scripts && start_invoice_service.bat\"",
+    "fullstack:start": "concurrently -n \"FRONTEND,BACKENDS\" -c \"green,blue\" \"npm run dev\" \"cd scripts && run_all_backends.bat\"",
+    "fullstack:stop": "npm run services:stop-all",
+    "fullstack:test": "cd scripts && test_all_backends.bat"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
