--- a/python-ChatBot/pycode/requirements.txt
+++ b/python-ChatBot/pycode/requirements.txt
@@ -1,7 +1,11 @@
-fastapi==0.104.0
-uvicorn==0.23.2
-pandas==2.1.1
+fastapi==0.109.0
+uvicorn==0.29.0
+pydantic==2.6.0
+pandas==2.1.0
+numpy==1.26.0
 python-dotenv==1.0.0
+scikit-learn==1.4.0
 groq==0.4.0
 python-multipart==0.0.6
-pydantic==2.4.2 
+requests==2.31.0
+aiofiles==23.2.1 
