--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "styled-components": "^6.1.17",
     "tailwind-scrollbar-hide": "^2.0.0",
     "toaster": "^0.1.2",
+    "use-debounce": "^10.0.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
