--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.12.1",
+    "html2canvas": "^1.4.1",
     "ionicons": "^8.0.8",
     "ol": "^10.5.0",
     "powerbi-client": "^2.23.1",
