--- a/python-ChatBot/exportInvoice/requirements.txt
+++ b/python-ChatBot/exportInvoice/requirements.txt
@@ -1,7 +1,7 @@
-fastapi>=0.95.0
-uvicorn>=0.21.1
-reportlab>=3.6.12
-python-multipart>=0.0.6
-requests>=2.28.2
-Pillow>=9.5.0
-pydantic>=1.10.7 
+fastapi==0.104.0
+uvicorn==0.23.2
+pydantic==2.4.2
+reportlab==4.0.0
+python-multipart==0.0.6
+aiofiles==23.2.1
+pillow==9.5.0 
