--- a/python-ChatBot/qrCode/requirements.txt
+++ b/python-ChatBot/qrCode/requirements.txt
@@ -1,5 +1,8 @@
-fastapi>=0.95.0
-uvicorn>=0.21.1
-qrcode>=7.3.1
-pillow>=9.5.0
-pydantic>=1.10.7 
+fastapi==0.104.0
+uvicorn==0.23.2
+pydantic==2.4.2
+pydantic-settings==2.0.3
+qrcode==7.3.1
+pillow==9.5.0
+requests==2.31.0
+python-multipart==0.0.6 
